[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Kłak <tomasz@tomaszklak.pl>"]

[dependencies]
smallvec={version="1", features=["const_new"]}
structopt = "0.3"
maplit="1"
rustc-hash = "1"
itertools = "0.10"

[profile.release]
debug=true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
